# gtfs2nx

./: .gitignore  .gitignore.docs  .gitignore.main  .gitignore.slurm  LICENSE  README.md  pyproject.toml  requirements.txt
.githooks/: post-checkout
docs/: api.md  getting_started.ipynb
docs/blog/: blog-gnn.md  blog-network-analysis.md
docs/gists/: GTFS-route-type-classification.ipynb  gtfs2nx-routing-validation.ipynb
docs/notebooks/: Overture_POI_accessibility.ipynb  accessibility_city_comparison.ipynb  travel_behavior_modeling.ipynb
gtfs2nx/: __init__.py  network.py  score.py  utils.py
slurm/: download.py  run-params-eu.yml  run-params-xml.yml  run.py  slurm-config-eu.yml  slurm-config-xml.yml  slurm-submit.sh
tests/: test_network.py
transit_access/: network.py  score.py  utils.py
