[tool.poetry]
name = "transit-access"
version = "0.1.0"
description = "GTFS-based transit accessibility index."
authors = ["Florian Nachtigall <nachtigall@tu-berlin.de>"]
readme = "README.md"
packages = [{include = "transit_access"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
osmnx = "^1.6.0"
networkx = "^3.1"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
shapely = "^2.0.1"
h3pandas = "^0.2.4"
# include fix for https://github.com/remix/partridge/issues/73
partridge = {git = "ssh://git@github.com/remix/partridge.git", rev = "master"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
