[tool.poetry]
name = "GTFS2nx"
version = "0.1.0"
description = "Convert GTFS feeds to realistic, routable NetworkX graph."
authors = ["Florian Nachtigall <nachtigall@tu-berlin.de>"]
readme = "README.md"
packages = [{include = "gtfs2nx"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
geopandas = "^0.13.2"
networkx = "^3.1"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
# include fix for https://github.com/remix/partridge/issues/73
partridge = {git = "ssh://git@github.com/remix/partridge.git", rev = "master"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
