[tool.poetry]
name = "gtfs2nx"
version = "0.2.0"
description = "Convert GTFS feeds to realistic, routable NetworkX graph."
authors = ["Florian Nachtigall <nachtigall@tu-berlin.de>"]
readme = "README.md"
packages = [{include = "gtfs2nx"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
geopandas = "^0.13.2"
networkx = "^3.1"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
# include fix for https://github.com/remix/partridge/issues/73
partridge = "1.1.2"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
